[gd_scene load_steps=4 format=3 uid="uid://bx4idayxu2svr"]

[ext_resource type="Script" path="res://Connection/connection.gd" id="1_0b6yw"]
[ext_resource type="LabelSettings" uid="uid://bv26f3wi54brd" path="res://Assets/label_settings.tres" id="1_djfus"]
[ext_resource type="Script" path="res://Connection/room_code.gd" id="3_cmnga"]

[node name="Connection" type="Control" node_paths=PackedStringArray("room_code_line")]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_0b6yw")
room_code_line = NodePath("MarginContainer/VBoxContainer/RoomCode")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.662667, 0.56, 1, 1)

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 30
theme_override_constants/margin_top = 30
theme_override_constants/margin_right = 30
theme_override_constants/margin_bottom = 30

[node name="Label" type="Label" parent="MarginContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 0
text = "Connect to game"
label_settings = ExtResource("1_djfus")

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
alignment = 1

[node name="CreateRoomButton" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 32
text = "Create Room"

[node name="JoinRoomButton" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 32
text = "Join Room"

[node name="RoomCode" type="LineEdit" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 32
placeholder_text = "Enter Code"
alignment = 1
max_length = 6
context_menu_enabled = false
clear_button_enabled = true
script = ExtResource("3_cmnga")

[connection signal="pressed" from="MarginContainer/VBoxContainer/CreateRoomButton" to="." method="_on_create_room_button_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/JoinRoomButton" to="." method="_on_join_room_button_pressed"]
[connection signal="text_changed" from="MarginContainer/VBoxContainer/RoomCode" to="MarginContainer/VBoxContainer/RoomCode" method="_on_text_changed"]
